$Id: History,v 1.2 1999-01-08 16:31:23 gunter Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                    Super-Category History file
                    ---------------------------

This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
at this level and keep track of all relavant tags.
It DOES NOT substitute the CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
envs-00-04-01	7th January 1999 hajime Yoshida
- New Momo with make capabilities along with library selection
- GGEmake updated for the latest g++ (egcs-1.1)
envs-00-04-01  11th December 1998  Hajime Yoshida Masayasu Nagamatu
- The latest version of GGE, the whole *.java, *.class and example files committed

10th December Hajime Yoshida
- Tcl/Tk GAG warns to the binaries compiled with G4UIterminal session
	and stops it.

envs-00-03-04  12th November 1998  John Allison
- Tagged (what was envs-00-30-03?).

12th Nov. 1998 Hajime Yoshida
-many new features added to Momo/java/Momo/GGE
-minor modification to Momo/GGEmake
-addition of Momo/java/Momo/Momo

envs-00-03-02  14th Sep 1998 Hajime Yoshida
	- minor updates in GGE
envs-00-03-01  13th Sep 1998 Hajime Yoshida
	-Momo/GGEmake added README and a macro file
	-Momo/java/Momo/GGE updated. 
		BREPs, sample persistent files etc.
envs-00-02-01  3rd Sep 1998 Hajime Yoshida
	Momo/GGEmake
	Momo/java/Momo/GGE
	GGE committed
envs-00-01-03  17th Aug 1998 Hajime Yoshida
- touched many files in Momo Tcl/Tk and Java

envs-00-01-02  15th July 1998  John Allison