@@ -1988,6 +1988,29 @@ etc.</a></td>
 
 <td></td>
 </tr>
+
+<tr>
+<td>envs-01-00-02</td>
+
+<td></td>
+
+<td></td>
+
+<td>- Only OPACS and History tagged.
+<br>- Archived Momo (cvs remove) which puts it in the Attic.&nbsp; Can
+be retrieved with cvs update -D 990519 environmants/Momo.
+<br>- OPACS development (Guy).
+<br>- XVT not currently under development.</td>
+
+<td>John Allison, Hajime Yoshida,
+<br>Guy Barrand</td>
+
+<td>990520</td>
+
+<td></td>
+
+<td></td>
+</tr>
 </table>
 
 <table BORDER WIDTH="100%" NOSAVE >
